# fuse-libretro

./: .gitignore  .gitlab-ci.yml  .travis.yml  Makefile.common  Makefile.libretro  README.md  fuse_libretro.info  libretro.c  libspectrum.h  scalers32.c
fuse/: .gitignore  AUTHORS  ChangeLog  INSTALL  Makefile.am  Makefile.in  README  THANKS  aclocal.m4  autogen.sh  bitmap.h  compat.h  config.h.in  configure  configure.ac  display.c  display.h  event.c  event.h  fuse.c  fuse.font  fuse.h  input.c  input.h  keyboard.c  keyboard.h  keysyms.pl  loader.c  loader.h  machine.c  machine.h  memory.c  memory.h  memory_pages.c  mempool.c  mempool.h  menu.c  menu.h  menu_data.pl  module.c  (+36 more)
fuse/compat/: Makefile.am  mkstemp.c
fuse/compat/amiga/: Makefile.am  Makefile.in  osname.c  paths.c
fuse/compat/linux/: Makefile.am  Makefile.in  paths.c
fuse/compat/morphos/: Makefile.am  Makefile.in  osname.c
fuse/compat/unix/: Makefile.am  Makefile.in  dir.c  file.c  osname.c  paths.c  socket.c  timer.c  tuntap.c
fuse/compat/wii/: Makefile.am  Makefile.in  dir.c  osname.c  paths.c  timer.c
fuse/compat/win32/: Makefile.am  Makefile.in  osname.c  paths.c  socket.c  timer.c
fuse/data/: Makefile.am  Makefile.in  fuse.desktop.in  fuse.xml.in
fuse/data/win32/: distribution.mk
fuse/debugger/: Makefile.am  Makefile.in  breakpoint.c  breakpoint.h  command.c  commandl.c  commandl.l  commandy.c  commandy.h  commandy.y  debugger.c  debugger.h  debugger_internals.h  disassemble.c  event.c  expression.c  variable.c
fuse/hacking/: ChangeLog  Makefile.am  Makefile.in  coding_style.txt  cvs-tags  implementation_notes.txt  peripheral_tests.txt  sound.txt  timer.txt  ui.txt
fuse/infrastructure/: startup_manager.h
fuse/lib/: Makefile.am  Makefile.in
fuse/lib/compressed/: disk_plus3.szx  tape_128.h  tape_16.h  tape_16.szx  tape_2048.h  tape_2048.szx  tape_2068.h  tape_2068.szx  tape_48.h  tape_48_ntsc.h  tape_48_ntsc.szx  tape_pentagon.h  tape_plus2.h  tape_plus2.szx  tape_plus2a.h  tape_plus2a.szx  tape_plus3.h  tape_plus3.szx  tape_plus3e.h  tape_plus3e.szx  tape_scorpion.h  tape_scorpion.szx  tape_se.h  tape_se.szx  tape_ts2068.h  tape_ts2068.szx
fuse/lib/uncompressed/: disk_plus3.szx  tape_128.szx  tape_16.szx  tape_2048.szx  tape_2068.szx  tape_48.szx  tape_48_ntsc.szx  tape_pentagon.szx  tape_plus2.szx  tape_plus2a.szx  tape_plus3.szx  tape_plus3e.szx  tape_scorpion.szx  tape_se.szx  tape_ts2068.szx
fuse/m4/: glib-2.0.m4  libxml.m4  pkg.m4
fuse/machines/: Makefile.am  Makefile.in  machines.h  machines_periph.c  machines_periph.h  pentagon.c  pentagon.h  pentagon1024.c  pentagon512.c  scorpion.c  scorpion.h  spec128.c  spec128.h  spec16.c  spec48.c  spec48.h  spec48_ntsc.c  spec_se.c  specplus2.c  specplus2a.c  specplus3.c  specplus3.h  specplus3e.c  tc2048.c  tc2068.c  tc2068.h  ts2068.c
fuse/man/: Makefile.am  Makefile.in  fuse.1
fuse/peripherals/: Makefile.am  Makefile.in  ay.c  ay.h  dck.c  dck.h  fuller.c  fuller.h  if1.c  if1.h  if2.c  if2.h  joystick.c  joystick.h  kempmouse.c  kempmouse.h  melodik.c  melodik.h  multiface.c  printer.c  printer.h  scld.c  scld.h  speccyboot.c  speccyboot.h  specdrum.c  specdrum.h  spectranet.c  spectranet.h  ttx2000s.c  ttx2000s.h  ula.c  ula.h
fuse/peripherals/disk/: Makefile.am  Makefile.in  beta.c  beta.h  crc.c  crc.h  disciple.c  disciple.h  disk.c  disk.h  fdd.c  fdd.h  opus.c  opus.h  plusd.c  plusd.h  upd_fdc.c  upd_fdc.h  wd_fdc.c  wd_fdc.h
fuse/peripherals/flash/: Makefile.am  Makefile.in  am29f010.c  am29f010.h
fuse/peripherals/ide/: Makefile.am  Makefile.in  divide.c  divide.h  ide.c  ide.h  simpleide.c  simpleide.h  zxatasp.c  zxatasp.h  zxcf.c  zxcf.h
fuse/peripherals/nic/: Makefile.am  Makefile.in  enc28j60.c  enc28j60.h  w5100.c  w5100.h  w5100_internals.h  w5100_socket.c
fuse/perl/: Makefile.am  Makefile.in  cpp-perl.pl
fuse/perl/Fuse/: Dialog.pm  Makefile.am  Makefile.in
fuse/pokefinder/: Makefile.am  Makefile.in  pokefinder.c  pokefinder.h  pokemem.c  pokemem.h
fuse/roms/: 128-0.h  128-1.h  48.h  Makefile.am  Makefile.in  README.copyright  plus2-0.h  plus2-1.h  plus3-0.h  plus3-1.h  plus3-2.h  plus3-3.h  plus3e-0.h  plus3e-0.rom  plus3e-1.h  plus3e-1.rom  plus3e-2.h  plus3e-2.rom  plus3e-3.h  se-0.h  se-1.h  tc2048.h  tc2068-0.h  tc2068-1.h
fuse/sound/: Makefile.am  Makefile.in  alsasound.c  aosound.c  blipbuffer.h  coreaudiosound.c  dxsound.c  hpsound.c  nullsound.c  osssound.c  pulsesound.c  sdlsound.c  sunsound.c  wiisound.c  win32sound.c
fuse/timer/: Makefile.am  Makefile.in  native.c  sdl.c  timer.c  timer.h
fuse/ui/: Makefile.am  Makefile.in  ui.h  uidisplay.h  uijoystick.c  uijoystick.h
fuse/ui/fb/: Makefile.am  Makefile.in  fbdisplay.c  fbdisplay.h  fbjoystick.c  fbkeyboard.c  fbkeyboard.h  fbmouse.c  fbmouse.h  fbui.c  keysyms.c
fuse/ui/gtk/: Makefile.am  Makefile.in  binary.c  browse.c  confirm.c  debugger.c  fileselector.c  gtkcompat.c  gtkcompat.h  gtkdisplay.c  gtkinternals.h  gtkjoystick.c  gtkkeyboard.c  gtkmouse.c  gtkui.c  keysyms.c  memory.c  memory_gtk2.c  menu_data.c  (+12 more)
fuse/unittests/: Makefile.am  Makefile.in  unittests.c  unittests.h
fuse/z80/: Makefile.am  Makefile.in  coretest.c  opcodes_base.c  z80.c  z80.h  z80.pl  z80_cb.c  z80_checks.h  z80_ddfd.c  z80_ddfdcb.c  z80_ed.c  z80_macros.h  z80_ops.c
libspectrum/: .gitignore  AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  THANKS  accessor.pl  aclocal.m4  autogen.sh  buffer.c  bzip2.c  config.h.in  configure  configure.ac  creator.c  crypto.c  csw.c  dck.c  dll.c  generate.pl.in  ide.c  internals.h  libspectrum.c  libspectrum.h.in  make-perl.c  memory.c  microdrive.c  mmc.c  plusd.c  pzx_read.c  rzx.c  sna.c  snap_accessors.c  snap_accessors.txt  snapshot.c  snp.c  sp.c  symbol_table.c  szx.c  (+22 more)
libspectrum/doc/: Makefile.am  cvs-tags  libspectrum.3  libspectrum.txt
libspectrum/hacking/: ChangeLog  Makefile.am
libspectrum/myglib/: Makefile.am  garray.c  ghash.c  glock.c  gslist.c
libspectrum/test/: Makefile.am  edges.c  raw-data-block.tzx  szx.c  test.c  test.h  test15.c  test_edges.c  trailing-pause-block.tzx
(+178 files in other folders)
